[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/slime.gd" type="Script" id=1]
[ext_resource path="res://ressources/SlimeFrames.tres" type="SpriteFrames" id=2]
[ext_resource path="res://assets/sfx/squash.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 24, 4 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4, 16 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 24, 4 )

[node name="Slime" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 51
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -4.17233e-07 )
scale = Vector2( 1, 0.941176 )
frames = ExtResource( 2 )
animation = "crawl"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="FloorChecker" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 2

[node name="TopChecker" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopChecker"]
position = Vector2( 0, -24 )
shape = SubResource( 2 )

[node name="SideChecker" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="SideChecker"]
position = Vector2( -28.5, 0 )
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="SideChecker"]
position = Vector2( 28.5, 0 )
shape = SubResource( 3 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="SideChecker"]
position = Vector2( 0, 24 )
shape = SubResource( 4 )

[node name="Disappear" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="SfxSquash" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -6.0
pitch_scale = 0.65

[connection signal="body_entered" from="TopChecker" to="." method="_on_TopChecker_body_entered"]
[connection signal="body_entered" from="SideChecker" to="." method="_on_SideChecker_body_entered"]
[connection signal="timeout" from="Disappear" to="." method="_on_Disappear_timeout"]
